# toolref

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  REFERENCES.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  documents.py  health.py  query.py
backend/app/cache/: __init__.py  redis.py
backend/app/db/: __init__.py  engine.py  models.py
backend/app/ingestion/: __init__.py  chunker.py  embedder.py  parser.py  pipeline.py  queue.py  worker.py
backend/app/mcp/: __init__.py  main.py  server.py  tools.py
backend/app/retrieval/: __init__.py  cache.py  graph.py  llm.py  nodes.py  reranker.py  search.py  state.py
backend/app/storage/: __init__.py  minio.py
backend/app/vectorstore/: __init__.py  milvus.py
backend/eval/: run.py
backend/eval/results/: eval_full_20260330_160348.json  eval_ir_20260330_142436.json  eval_ir_20260330_142827.json  eval_ir_20260330_143659.json
backend/scripts/: reembed.py
backend/tests/: __init__.py  test_embedder.py  test_health.py  test_metrics.py  test_safe_parse_json.py  test_search.py
docs/: REFERENCES.md  architecture.md  local-llm-optimization.md  mcp.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
scripts/: batch_upload_wiki.py  check_services.sh  seed_dev.py  setup_env.sh
(+5 files in other folders)
