[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolref-backend"
version = "0.1.0"
description = "ToolRef — Production-grade Agentic RAG Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.0,<3.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",

    # Cache
    "redis>=5.2.0",

    # Vector store
    "pymilvus>=2.4.0,<2.5",

    # LLM / RAG (locked for future use)
    "langchain>=0.3.0,<0.4",
    "langgraph>=0.3.0,<0.4",

    # Embedding & Reranking
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.2.0",

    # Document parsing
    "unstructured[pdf,md,html]>=0.16.0",

    # MCP
    "mcp>=1.0.0",

    # Evaluation
    "dspy>=2.5.0",
    "arize-phoenix>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
